fixed scaling background issue on mobile

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -4,6 +4,11 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+body{
+  max-width:100%;
+  overflow-x: hidden;
+}
+
 // Bootstrap Overrides
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 1rem;
